--- a/index.html
+++ b/index.html
@@ -1,8 +1,23 @@
 <html>
 <head>
-<title>Bacobahnen Rulez</title>
+  <title>Bacobahnen Rulez</title>
+  <link rel="stylesheet" href="styles.css" type="text/css" />
+  <script type="text/javascript" src="jquery-1.5.min.js"></script>
+  <script type="text/javascript" src="scripts.js"></script>
 </head>
 <body>
-<h1>Bacobahnen Rulez</h1>
+  <h1>Bacobahnen Rulez</h1>
+  <div class="board">
+    <table>
+      <tr>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td></td>
+        <td></td>
+      </tr>
+     </table>
+  </div>
 </body>
 </html>
