Spiking basic version 1 grid markup with an HTML table

--- a/index.html
+++ b/index.html
@@ -1,8 +1,22 @@
-<html>
-<head>
-<title>Bacobahnen Rulez</title>
-</head>
-<body>
-<h1>Bacobahnen Rulez</h1>
-</body>
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="utf-8" />
+		<link rel="stylesheet" href="css/main.css" />
+		<title>Bacobahnen</title>
+		<script src="js/jquery-1.5.1.min.js" charset="utf-8"></script>
+		<script src="js/main.js" charset="utf-8"></script>
+	</head>
+	<body>
+		<h1>Bacobahnen</h1>
+		<table class="grid center">
+			<tbody>
+				<tr> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
+				<tr> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
+				<tr> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
+				<tr> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
+				<tr> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
+			</tbody>
+		</table>
+	</body>
 </html>
