--- a/index.html
+++ b/index.html
@@ -2,21 +2,16 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
+		<link href='http://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="css/main.css" />
-		<title>Bacobahnen</title>
 		<script src="js/jquery-1.5.1.min.js" charset="utf-8"></script>
 		<script src="js/main.js" charset="utf-8"></script>
+		<title>Bacobahnen</title>
 	</head>
 	<body>
 		<h1>Bacobahnen</h1>
-		<table class="grid center">
-			<tbody>
-				<tr> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
-				<tr> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
-				<tr> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
-				<tr> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
-				<tr> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
-			</tbody>
+		<table class="grid center" id="grid">
 		</table>
 	</body>
 </html>
+
