Removed internal grid representation and row/col passing in favor or single object. Replaced IF w/ bind/unbind

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 	</head>
 	<body>
 		<h1>Bacobahnen</h1>
-		<table class="grid center" id="grid">
-		</table>
+		<table class="grid center" id="grid"></table>
 	</body>
 </html>
 
