--- a/index.html
+++ b/index.html
@@ -10,7 +10,16 @@
 	</head>
 	<body>
 		<h1>Bacobahnen</h1>
-		<table class="grid center" id="grid"></table>
+		<table class="grid center">
+			<tbody>
+				<tr><td contentEditable="true"></td><td contentEditable="true"></td><td contentEditable="true"></td><td contentEditable="true"></td><td contentEditable="true"></td></tr>
+				<tr><td contentEditable="true"></td><td contentEditable="true"></td><td contentEditable="true"></td><td contentEditable="true"></td><td contentEditable="true"></td></tr>
+				<tr><td contentEditable="true"></td><td contentEditable="true"></td><td contentEditable="true"></td><td contentEditable="true"></td><td contentEditable="true"></td></tr>
+				<tr><td contentEditable="true"></td><td contentEditable="true"></td><td contentEditable="true"></td><td contentEditable="true"></td><td contentEditable="true"></td></tr>
+				<tr><td contentEditable="true"></td><td contentEditable="true"></td><td contentEditable="true"></td><td contentEditable="true"></td><td contentEditable="true"></td></tr>
+			</tbody>
+		</table>
+		<div id="div" style="width:100px;height:100px;background:gray;" contentEditable="true">Hi</div>
 	</body>
 </html>
 
