--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 	</head>
 	<body>
 		<h1>Bacobahnen</h1>
-		<table class="grid center">
+		<table id="board" class="grid center">
 			<tbody>
-				<tr><td contentEditable="true"></td><td contentEditable="true"></td><td contentEditable="true"></td><td contentEditable="true"></td><td contentEditable="true"></td></tr>
-				<tr><td contentEditable="true"></td><td contentEditable="true"></td><td contentEditable="true"></td><td contentEditable="true"></td><td contentEditable="true"></td></tr>
-				<tr><td contentEditable="true"></td><td contentEditable="true"></td><td contentEditable="true"></td><td contentEditable="true"></td><td contentEditable="true"></td></tr>
-				<tr><td contentEditable="true"></td><td contentEditable="true"></td><td contentEditable="true"></td><td contentEditable="true"></td><td contentEditable="true"></td></tr>
-				<tr><td contentEditable="true"></td><td contentEditable="true"></td><td contentEditable="true"></td><td contentEditable="true"></td><td contentEditable="true"></td></tr>
+				<tr><td></td><td></td><td></td><td></td><td></td></tr>
+				<tr><td></td><td></td><td></td><td></td><td></td></tr>
+				<tr><td></td><td></td><td></td><td></td><td></td></tr>
+				<tr><td></td><td></td><td></td><td></td><td></td></tr>
+				<tr><td></td><td></td><td></td><td></td><td></td></tr>
 			</tbody>
 		</table>
 	</body>
