added link tag author attributes [matt]

--- a/web/index.html
+++ b/web/index.html
@@ -5,6 +5,8 @@
 		<meta charset="utf-8" />
 		<link href='http://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="css/main.css" />
+		<link rel="author" href="https://github.com/benjaminplee">
+		<link rel="author" href="https://github.com/matterker">
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js" charset="utf-8"></script>
 		<script src="js/main.js" charset="utf-8"></script>
 	</head>
