working with draggables

--- a/web/index.html
+++ b/web/index.html
@@ -1,26 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>Bacobahnen</title>
 		<meta charset="utf-8" />
+		<title>Bacobahnen</title>
 		<link href='http://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
+		<link type="text/css" href="css/flick/jquery-ui-1.8.18.custom.css" rel="stylesheet" />	
 		<link rel="stylesheet" href="css/main.css" />
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js" charset="utf-8"></script>
+		<script src="js/jquery-1.7.1.min.js" charset="utf-8"></script>
+		<script src="js/jquery-ui-1.8.18.custom.min.js" charset="utf-8"></script>
 		<script src="js/main.js" charset="utf-8"></script>
 	</head>
 	<body>
 		<h1>Bacobahnen</h1>
 		<h3><u>The</u> Digital Whiteboard</h3>
-		<table id="board" class="grid center">
-			<tbody>
-				<tr><td></td><td></td><td></td><td></td><td></td></tr>
-				<tr><td></td><td></td><td></td><td></td><td></td></tr>
-				<tr><td></td><td></td><td></td><td></td><td></td></tr>
-				<tr><td></td><td></td><td></td><td></td><td></td></tr>
-				<tr><td></td><td></td><td></td><td></td><td></td></tr>
-			</tbody>
-		</table>
-		<p><a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">Bacobahnen</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="https://github.com/benjaminplee/Bacobahnen" property="cc:attributionName" rel="cc:attributionURL">Benjamin Lee & Matt Erker</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.<br />Based on a work at <a xmlns:dct="http://purl.org/dc/terms/" href="https://github.com/benjaminplee/Bacobahnen" rel="dct:source">github.com</a>.</p>
+
+    <div class="draggable ui-widget-content">a card</div>
+    <div class="draggable ui-widget-content">another card</div>
+
+    <p>
+      <a rel="license" href="http://creativecommons.org/licenses/by/3.0/"> <img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by/3.0/88x31.png" /></a>
+      <br />
+      Bacobahnen by 
+      <a href="https://github.com/benjaminplee/Bacobahnen">Benjamin Lee &amp; Matt Erker</a>
+      is licensed under a 
+      <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>
+      .
+      <br />
+      Based on a work at 
+      <a href="https://github.com/benjaminplee/Bacobahnen">github.com</a>
+      .
+    </p>
 		<a href="https://github.com/benjaminplee/Bacobahnen"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a> 
 	</body>
 </html>
