setup some better design, using html5 elements

--- a/web/index.html
+++ b/web/index.html
@@ -11,26 +11,27 @@
 		<script src="js/main.js" charset="utf-8"></script>
 	</head>
 	<body>
-		<h1>Bacobahnen</h1>
-		<h3><u>The</u> Digital Whiteboard</h3>
+    <header class="dark">
+      <h1>Bacobahnen</h1>
+    </header>
 
     <div class="draggable ui-widget-content">a card</div>
     <div class="draggable ui-widget-content">another card</div>
 
-    <p>
-      <a rel="license" href="http://creativecommons.org/licenses/by/3.0/"> <img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by/3.0/88x31.png" /></a>
-      <br />
-      Bacobahnen by 
+    <aside>
+      <a href="https://github.com/benjaminplee/Bacobahnen"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub" /></a> 
+    </aside>
+
+    <footer class="dark">
+      <a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" class="license" src="http://i.creativecommons.org/l/by/3.0/88x31.png" /></a>
+      <br/>
+      Bacobahnen is a creation of
       <a href="https://github.com/benjaminplee/Bacobahnen">Benjamin Lee &amp; Matt Erker</a>
-      is licensed under a 
+      <br />
+      and is licensed under a
       <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>
       .
-      <br />
-      Based on a work at 
-      <a href="https://github.com/benjaminplee/Bacobahnen">github.com</a>
-      .
-    </p>
-		<a href="https://github.com/benjaminplee/Bacobahnen"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a> 
+    </footer>
 	</body>
 </html>
 
