added example colors, cleanup

--- a/web/index.html
+++ b/web/index.html
@@ -15,8 +15,8 @@
       <h1>Bacobahnen</h1>
     </header>
 
-    <div class="draggable ui-widget-content">a card</div>
-    <div class="draggable ui-widget-content">another card</div>
+    <div class="draggable ui-widget-content red">a card</div>
+    <div class="draggable ui-widget-content blue">another card</div>
 
     <aside>
       <a href="https://github.com/benjaminplee/Bacobahnen"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub" /></a> 
