--- a/web/index.html
+++ b/web/index.html
@@ -15,8 +15,12 @@
       <h1>Bacobahnen</h1>
     </header>
 
-    <div class="draggable ui-widget-content red">a card</div>
-    <div class="draggable ui-widget-content blue">another card</div>
+    <section id="board">
+      <article class="draggable ui-widget-content red">Take out the trash</article>
+      <article class="draggable ui-widget-content blue">Make the bed</article>
+      <article class="draggable ui-widget-content green">Run around and around and around and around with the kids</article>
+      <article class="draggable ui-widget-content orange">Work out</article>
+    </section>
 
     <aside>
       <a href="https://github.com/benjaminplee/Bacobahnen"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub" /></a> 
